--- a/public/style.css
+++ b/public/style.css
@@ -132,24 +132,27 @@ font-weight: 500;
     color: rgb(3, 49, 92);
 }
 .task_form{
-    
+    border: 3px solid #9fc2e1;
     padding: 10px;
     border-radius: 15px;
-    background-color: #9fc2e1;
+    background-color: white;
    width: 50vw;
-   height: 35vh;
+   height: 40vh;
 }
 .task_form p{
+  
     font-size: 1.3em;
     color: rgb(3, 49, 92);
     font-weight: bold;
 }
 
 .task_form select {
-    background-color: white;
+    font-size: 1.2em;
+    text-align: center ;
+    background-color:#9fc2e1;
+    width: 100px;
     border: none;
     outline: none;
-    padding: 4px;
     color: rgb(3, 49, 92);
 }
 .login_error{
@@ -158,7 +161,7 @@ font-weight: 500;
 }
 
 .task_form option {
-background-color: white;
+background-color: #9fc2e1;
 border: none;
 outline: none;
 padding: 4px;
@@ -192,6 +195,7 @@ color: rgb(3, 49, 92);
     background-color: #9fc2e1;
 }
 .Lab_form{
+    padding: 10px;
     position: relative;
  border-radius: 10px;
 border: 2px solid rgb(85, 141, 194);
@@ -210,6 +214,7 @@ border: 2px solid rgb(85, 141, 194);
     right: 5px;
     color: rgb(3, 49, 92);
     background-color: #9fc2e1;
+    width: 100px;
     border: none;
     padding: 8px;
     font-weight: bold;
@@ -252,6 +257,13 @@ border-radius: 5px;
     text-align: center;
     font-size: 1.1em;
 }
+
+
+/* Style the icon */
+.file_label i {
+    margin-right: 5px;
+}
+
 .test_div{
     position: relative;
     padding: 10px;
@@ -259,9 +271,9 @@ border-radius: 5px;
     color: rgb(3, 49, 92);
 
     border-radius: 20px;
-    height: 20vh;
-    width: 60vw;
-margin-top: 10px;
+    height: 25vh;
+    width: 50vw;
+margin-top: 20px;
 background-color:#9fc2e1;
 }
 
@@ -313,6 +325,8 @@ padding-right: 20px;
     background-color: white;
     color: rgb(3, 49, 92);
     padding: 5px;
+    font-size: 0.8em;
+    font-weight: bold;
     border-radius: 5px;
     cursor: pointer;
     display: inline-block;
@@ -363,7 +377,7 @@ float: right;
 .created_by{
     position:absolute;
     text-decoration: none;
-    color: rgb(3, 49, 92);
+
    bottom: 0;
    right: 0;
 }
@@ -388,16 +402,17 @@ font-size: 1.2em;
 height: 15vh;
     outline: none;
     width: 35vw;
+    background-color: #9fc2e1;
 }
 .task_form button{
     color: rgb(3, 49, 92);
     font-size: 1em;
+    background-color: #9fc2e1;
     border-radius: 10px;
     float: right;
     width: 8vw;
     height: 5.5vh;
     border: none;
-    background-color: white;
 }
 
 .login_error{
@@ -477,12 +492,35 @@ position: relative;
     background-color: white;
     border: 2px solid #9fc2e1;
 }
-.files_divvv{
-    position: relative;
-    border-radius: 10px;    
+.test_div {
+    display: flex;
+    margin-bottom: 20px; /* Adjust spacing between test items */
+}
+
+.left_section,
+.right_section {
+    flex: 1; /* Each section takes equal width */
     padding: 10px;
+
+    border-radius: 5px;
+}
+
+.left_section {
+    text-align: left;
+    margin-right: 10px; /* Adjust spacing between test items */
+}
+
+.right_section {
+    padding: none;
+    margin-left: 10px; /* Adjust spacing between test items */
+}
+
+.files_divvv{
+    height: max-content;
+    position: relative;
+    border-radius: 5px;    
     padding-left: 10px;
-    font-weight: bold;
+    font-weight: 400;
     font-size: 1.3em;
     color: rgb(3, 49, 92);
     margin: 10px;
@@ -494,9 +532,22 @@ position: relative;
 
     background-color: #9fc2e1;
 }
+.file-info {
+    height: 6vh;
+    display: grid;
+    grid-template-columns: 11% 42% 37% 8%;
+    grid-column-gap: 10px; /* Adjust the gap between columns as needed */
+}
+.file-info > div {
+    border-right: 3px solid lightgrey; /* Adjust border width as needed */
+    padding-right: 10px;
+}
+.file-info > div:last-child {
+    border-right: none; /* Remove right border for the last div */
+}
 .files_divvv span{
     padding-left: 10px;
-    font-weight: 500;
+    font-weight: 400;
 
 color: white;    
 }
@@ -506,7 +557,7 @@ color: white;
 color: white;
 color: rgb(3, 49, 92);
     width: 6vw;
-    height: 2vw;
+
     border: none   ;
     border-radius:5px;
 
