--- a/views/tasks.ejs
+++ b/views/tasks.ejs
@@ -127,7 +127,7 @@
                 name="taskIds"
                 value="<%= task.task_id %>"
               />
-              <a class="delete" data-dtask="<%= task.task_id  %>" href=""
+              <a class="delete" style="height: 20px;" data-dtask="<%= task.task_id  %>" href=""
                 >Delete</a
               >
             
@@ -137,7 +137,7 @@
               <%= task.file_id %>
               <span>Task ID: </span>
               <%= task.task_id %> <br />
-              <hr style="background-color: white; font-weight: 400; border: none; height: 2px;">
+              <hr style="background-color: white; font-weight: 400; border: none; height: 2px ; width: 78vw;">
               <br>
               <span>Task Ditails:</span>
               <p class="task-details" style="display: inline; font-weight: 400;"><%= task.details %></p>
